--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,24 @@
 
 header{
-  background-color: #ffffff;
-  width: 100%;
+  color: #ffffff;
   border-bottom-color: #cccccc;
   height:75px;
+  width:100%;
+  padding: 60px;
+  text-align: center;
+  background:white;
+}
+body{
+  
 }
 .bigtext {
   background-color: #4aaaa5;
+  float:left;
   width:235px;
   height:75px;
   padding: 15px;
-  float: left;
   margin-left: 200px;
   
-}
-.container{
-   align-self:center;
 }
 #navlink{
   display: inline-block;
@@ -35,25 +38,35 @@ h2 {
   float:left;
 }
 
-.portfolio{
-  width:150px;
-  height:150px;
-}
-body{
-  background-color:#ffffff;
-  align-items:center;
-  width:960px;
-  margin:auto;
+.portfolioimage{
+  height:200px;
+  width:200px;
+  float:left;
+  text-align:center;
+
 }
 
-img{
-  float:left;
-  padding:10px;
+.portfoliotext{
+  background:#4aaaa5;
+  height:40px;
+  width:100%;
+  position:relative;
+}
+li{
+  color:white;
+  background:#4aaaa5;
+  width: 200px;
+  bottom: 10px;
+  height:40px;
 }
 
 footer{
+  position:absolute;
+  bottom:0;
+  left:0;
   background-color:#666666;
   width: 100%;
   height:75px;
-
+  border-top: solid #4aaaa5 5px;
+  
 }
